Fixed the alignment and visibility of the dot in numbers when some are integers and some are decimals.

--- a/records/app/src/main/scss/general.scss
+++ b/records/app/src/main/scss/general.scss
@@ -143,9 +143,9 @@
 .stf-number-dot {
     -fx-font-family: $font-main;
     -fx-font-size: 85%;
-}
-.number-display-dot-invisible {
-    visibility: hidden;
+    &.stf-number-dot-invisible {
+        visibility:hidden;
+    }
 }
 
 .string-display {
